--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webgpu/cts",
+  "name": "@webgpu/cts-react-native",
   "version": "0.1.0",
   "description": "WebGPU Conformance Test Suite",
   "scripts": {
@@ -17,7 +17,15 @@
     "gen_cache": "node tools/gen_cache",
     "tsdoc": "grunt tsdoc",
     "start": "node tools/dev_server",
-    "dev": "node tools/dev_server"
+    "dev": "node tools/dev_server",
+    "android": "react-native run-android",
+    "build:android": "npm run mkdist && react-native bundle --entry-file src/index.js --platform android --dev true --bundle-output dist/main.android.jsbundle --assets-dest dist/res",
+    "build:ios": "npm run mkdist && react-native bundle --entry-file src/index.js --platform ios --dev true --bundle-output dist/main.ios.jsbundle --assets-dest dist",
+    "ios": "react-native run-ios",
+    "rnta:lint": "eslint .",
+    "mkdist": "node -e \"require('node:fs').mkdirSync('dist', { recursive: true, mode: 0o755 })\"",
+    "rnta:start": "react-native start",
+    "rnta:test": "jest"
   },
   "engines": {
     "node": "^12.22.0 || ^14.17.0 || >=16.0.0",
@@ -34,6 +42,10 @@
     "url": "https://github.com/gpuweb/cts/issues"
   },
   "homepage": "https://github.com/gpuweb/cts#readme",
+  "dependencies": {
+    "react": "18.3.1",
+    "react-native": "0.75.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
@@ -80,6 +92,19 @@
     "serve-index": "^1.9.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.3",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.3",
+    "@react-native/eslint-config": "0.75.3",
+    "@react-native/metro-config": "0.75.3",
+    "@react-native/typescript-config": "0.75.3",
+    "@rnx-kit/metro-config": "^2.0.0",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "jest": "^29.6.3",
+    "react-native-test-app": "^3.10.8",
+    "react-test-renderer": "18.3.1"
   }
 }
