--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
+  "extends": [
+    "./node_modules/gts/tsconfig-google.json",
+    "@react-native/typescript-config/tsconfig.json"
+  ],
   "compilerOptions": {
     "lib": ["dom", "es2020"],
-    "module": "esnext",
+    "module": "NodeNext",
     // Use types only from these packages (not everything in package.json, which is the default).
     // Note that TypeScript's `/// <reference />` is the same as adding an entry here - it's global
     // to the whole project.
@@ -11,7 +14,7 @@
       "@webgpu/types",
       // Required for standalone.ts
       "@types/jquery",
-      "@types/w3c-image-capture",
+      "@types/w3c-image-capture"
     ],
     /* Output options */
     "noEmit": true,
@@ -36,7 +39,7 @@
     // - Doesn't work with @webgpu/types right now, also has annoying interactions and limited value
     "exactOptionalPropertyTypes": false,
     /* Module Options */
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "esModuleInterop": false,
     "isolatedModules": true,
     "skipLibCheck": true,
@@ -44,29 +47,22 @@
     // @tsconfig/strictest is a useful reference for new options:
     // https://github.com/tsconfig/bases/blob/main/bases/strictest.json
   },
-  "include": [
-    "src/**/*.ts",
-    "src/external/**/*.js",
-  ],
+  "include": ["src/**/*.ts", "src/external/**/*.js"],
   "typedocOptions": {
     "entryPointStrategy": "expand",
-    "entryPoints": [
-      "src/common/framework/",
-      "src/common/util/",
-      "src/webgpu/",
-    ],
+    "entryPoints": ["src/common/framework/", "src/common/util/", "src/webgpu/"],
     "exclude": [
       "**/*.spec.ts",
       "**/*.html.ts",
       "src/*/listing.ts",
-      "src/webgpu/util/device_pool.ts",
+      "src/webgpu/util/device_pool.ts"
     ],
     "excludeInternal": true,
     "excludeProtected": true,
     "excludePrivate": true,
     "validation": {
       "invalidLink": true,
-      "notExported": false,
+      "notExported": false
     },
     "readme": "./docs/helper_index.txt",
     "out": "docs/tsdoc/"
