--- a/package.json
+++ b/package.json
@@ -44,12 +44,20 @@
   "homepage": "https://github.com/gpuweb/cts#readme",
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-wgpu": "^0.1.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.20.0",
     "@babel/preset-typescript": "^7.23.2",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.3",
+    "@react-native/eslint-config": "0.75.3",
+    "@react-native/metro-config": "0.75.3",
+    "@react-native/typescript-config": "0.75.3",
+    "@rnx-kit/metro-config": "^2.0.0",
     "@types/babel__core": "^7.20.3",
     "@types/dom-mediacapture-transform": "^0.1.8",
     "@types/dom-webcodecs": "^0.1.9",
@@ -58,16 +66,20 @@
     "@types/morgan": "^1.9.7",
     "@types/offscreencanvas": "^2019.7.2",
     "@types/pngjs": "^6.0.3",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/serve-index": "^1.9.3",
     "@types/w3c-image-capture": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@webgpu/types": "^0.1.43",
     "ansi-colors": "4.1.3",
+    "babel-jest": "^29.6.3",
     "babel-plugin-add-header-comment": "^1.0.3",
     "babel-plugin-const-enum": "^1.2.0",
     "chokidar": "^3.5.3",
     "eslint": "^8.52.0",
+    "eslint-config-react-native-wcandillon": "^3.10.2",
     "eslint-plugin-ban": "^1.6.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-gpuweb-cts": "file:./tools/eslint-plugin-gpuweb-cts",
@@ -83,28 +95,18 @@
     "grunt-timer": "^0.6.0",
     "gts": "^5.2.0",
     "http-server": "^14.1.1",
+    "jest": "^29.6.3",
     "morgan": "^1.10.0",
     "playwright-core": "^1.39.0",
     "pngjs": "^7.0.0",
     "portfinder": "^1.0.32",
     "prettier": "~3.0.3",
+    "react-native-test-app": "^3.10.8",
+    "react-test-renderer": "18.3.1",
     "screenshot-ftw": "^1.0.5",
     "serve-index": "^1.9.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.3",
-    "typescript": "~5.2.2",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.3",
-    "@react-native/eslint-config": "0.75.3",
-    "@react-native/metro-config": "0.75.3",
-    "@react-native/typescript-config": "0.75.3",
-    "@rnx-kit/metro-config": "^2.0.0",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "jest": "^29.6.3",
-    "react-native-test-app": "^3.10.8",
-    "react-test-renderer": "18.3.1"
+    "typescript": "~5.2.2"
   }
 }
