Try to load tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": ["eslint-config-react-native-wcandillon/tsconfig.base"],
   "compilerOptions": {
     "noUncheckedIndexedAccess": false,
-    "types": ["@webgpu/types"]
+    "types": ["@webgpu/types"],
+    "module": "esnext"
   }
 }
