--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,4 +6,6 @@ require "#{ws_dir}/node_modules/react-native-test-app/test_app.rb"
 
 workspace 'gpuweb-cts-react-native.xcworkspace'
 
-use_test_app!
+use_test_app!({
+  hermes_enabled: true
+})
