--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react": "18.3.1",
     "react-native": "0.75.0",
     "react-native-share": "^11.0.3",
-    "react-native-wgpu": "^0.1.7"
+    "react-native-wgpu": "^0.1.7",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
