Add "export results" button (#4)
* Add share button

* Export file as JSON

--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.0",
-    "react-native-wgpu": "^0.1.7"
+    "react-native-share": "^11.0.3",
+    "react-native-wgpu": "^0.1.7",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
